--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -4,6 +4,10 @@ authors = []
 description = ""
 telemetry = false
 requirements = []
+[contracts.core-forge-factory]
+path = "contracts/core-forge-factory.clar"
+depends_on = []
+
 [contracts.core-forge-registry]
 path = "contracts/core-forge-registry.clar"
 depends_on = []
